implement GET one, POST, PUT and DELETE

--- a/serverless.yml
+++ b/serverless.yml
@@ -61,6 +61,18 @@ functions:
       - http:
           path: todos
           method: get
+      - http:
+          path: todos/{id}
+          method: get
+      - http:
+          path: todos
+          method: post
+      - http:
+          path: todos/{id}
+          method: put
+      - http:
+          path: todos/{id}
+          method: delete
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
