--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ before_script:
   - ./cc-test-reporter before-build
 
 script:
+  - env GOOS=linux go build -ldflags="-s -w" -o bin/todos internal/lambda/todos/main.go
   - sls deploy --verbose
-
 
 after_script:
   - ./cc-test-reporter after-build -t gocov --exit-code $TRAVIS_TEST_RESULT
