--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ sudo: required
 language: go
 
 env:
-  - GO111MODULE=on
   global:
     CC_TEST_REPORTER_ID: 320c3b1aa2b0d201eff445e9b79e52b188b9c9816a783fd41b85da1af8bb6f29
+
+env:
+  - GO111MODULE=on
 
 go:
   - 1.12
