--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ go:
 
 install:
   - mkdir bin
-  - export PATH=$PATH:$HOME/bin
+  - export PATH=$PATH:$PWD/bin/
   - go get github.com/axw/gocov/gocov
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
